force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__Locking_Record__c/agf__Locking_Record__c.object-meta.xml
<CustomObject>
    <label>Locking Record</label>
    <nameField>
        <displayFormat>L-{0000}</displayFormat>
        <label>Locking Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Locking Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>