force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__Locking_Record__c/fields/agf__End_Time__c.field-meta.xml
<CustomField>
    <fullName>agf__End_Time__c</fullName>
    <label>Resolved Lock Time</label>
    <type>DateTime</type>
</CustomField>