force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__Locking_Record__c/fields/agf__Locked_Duration__c.field-meta.xml
<CustomField>
    <fullName>agf__Locked_Duration__c</fullName>
    <description>Locked duration (in Hours) is the difference between now and the record&apos;s start lock time if the record has not been resolved; otherwise, Locked duration is the difference between when the record was resolved and record&apos;s start lock time.</description>
    <formula>IF(ISNULL(agf__End_Time__c), (NOW() - agf__Start_Time__c), (agf__End_Time__c - agf__Start_Time__c)) * 24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Locked duration (in Hours) is the difference between now and the record&apos;s start lock time if the record has not been resolved; otherwise, Locked duration is the difference between when the record was resolved and record&apos;s start lock time.</inlineHelpText>
    <label>Locked Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>