force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__Locking_Record__c/fields/agf__Reason__c.field-meta.xml
<CustomField>
    <fullName>agf__Reason__c</fullName>
    <label>Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Basic exceed age</fullName>
            </value>
            <value>
                <fullName>Full exceed age</fullName>
            </value>
            <value>
                <fullName>Basic exceed limit</fullName>
            </value>
            <value>
                <fullName>Basic&amp;Full exceed limit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>