force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__Locking_Record__c/fields/agf__Response_Duration__c.field-meta.xml
<CustomField>
    <fullName>agf__Response_Duration__c</fullName>
    <description>Response duration (in Hours) is the difference between when the record was resolved and when the record was created if the record has been resolved; otherwise, Response duration is removed.</description>
    <formula>IF(ISNULL(agf__End_Time__c), null, (agf__End_Time__c - CreatedDate)) * 24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Response duration (in Hours) is the difference between when the record was resolved and when the record was created if the record has been resolved; otherwise, Response duration is removed.</inlineHelpText>
    <label>Response Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>