force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__Locking_Record__c/fields/agf__Start_Time__c.field-meta.xml
<CustomField>
    <fullName>agf__Start_Time__c</fullName>
    <label>Start Lock Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>