force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__Locking_Record__c/validationRules/agf__StartTimeLimit.validationRule-meta.xml
<ValidationRule>
    <fullName>agf__StartTimeLimit</fullName>
    <active>true</active>
    <description>Start time cannot be set to more than a week into the future.</description>
    <errorConditionFormula>agf__Start_Time__c  &gt; NOW() + 7</errorConditionFormula>
    <errorDisplayField>agf__Start_Time__c</errorDisplayField>
    <errorMessage>Lock start time set for more than 7 days in the future.</errorMessage>
</ValidationRule>