force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__Locking_Record__c/listViews/agf__All.listView-meta.xml
<ListView>
    <fullName>agf__All</fullName>
    <columns>NAME</columns>
    <columns>agf__Team__c</columns>
    <columns>agf__Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>